--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@foxxmd/get-version",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": "https://github.com/foxxmd/get-version",
   "description": "Get a version identifier from multiple sources",
   "main": "./dist/commonjs/index.js",
@@ -59,6 +59,7 @@
   "dependencies": {
     "@types/debug": "^4.1.12",
     "debug": "^4.3.5",
+    "dirname-filename-esm": "^1.1.1",
     "git-last-commit": "^1.0.1"
   },
   "exports": {
